--- a/manifest.yml
+++ b/manifest.yml
@@ -4,6 +4,8 @@ applications:
   path: build/libs/pal-tracker.jar
   routes:
   - route: pal-tracker-f4f19a50-9bf7-11e9-915b-478f5c1ffdc2.cfapps.io
+  services:
+  - tracker-database
   env:
     WELCOME_MESSAGE: Hello from the review environment
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
