--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
 - name: pal-tracker
   path: build/libs/pal-tracker.jar
   routes:
-  - route: pal-tracker-pietro-sampsonite.apps.chicken.pal.pivotal.io
+  - route: pal-tracker-f4f19a50-9bf7-11e9-915b-478f5c1ffdc2.cfapps.io
   env:
     WELCOME_MESSAGE: Hello from the review environment
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
